--- a/yelp_regression.ipynb
+++ b/yelp_regression.ipynb
@@ -44,11 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import zipfile\n",
     "\n",
     "businesses = pd.read_json('yelp_business.json', lines=True)\n",
     "reviews = pd.read_json('yelp_review.json', lines=True)\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.351977Z",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.392763Z",
@@ -345,7 +346,7 @@
        "4    AB                  0                   1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.407101Z",
@@ -472,7 +473,7 @@
        "4                    7  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.419331Z",
@@ -586,7 +587,7 @@
        "4             1.000000             34.636364                    0.090909  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.433534Z",
@@ -696,7 +697,7 @@
        "4                 1                 4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.445061Z",
@@ -786,7 +787,7 @@
        "4  --9e1ONYQuAa-CB_Rrw7Tw           68.064935          154"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.455113Z",
@@ -875,7 +876,7 @@
        "4  --FBCX-N37CMYDfs790Bnw                5.500000            4"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.460856Z",
@@ -927,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.556908Z",
@@ -1054,7 +1055,7 @@
        "max             6335.000000                   10.666667  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:21.598473Z",
@@ -1091,7 +1092,7 @@
        "Name: stars, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:24.043166Z",
@@ -1167,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1217,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:24.649109Z",
@@ -1306,7 +1307,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:24.661609Z",
@@ -1358,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1394,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-14T14:51:24.968871Z",
@@ -1503,7 +1504,7 @@
        "7  0.802160             (number_tips, weekday_checkins)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2672,6 +2673,239 @@
    ],
    "source": [
     "df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>level_1</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>stars</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_review_sentiment</td>\n",
+       "      <td>0.782187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_review_length</td>\n",
+       "      <td>0.277081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_review_age</td>\n",
+       "      <td>0.125645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>has_bike_parking</td>\n",
+       "      <td>0.068084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_review_count</td>\n",
+       "      <td>0.066572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_number_years_elite</td>\n",
+       "      <td>0.064419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_tip_length</td>\n",
+       "      <td>0.052899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>price_range</td>\n",
+       "      <td>0.052565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>number_cool_votes</td>\n",
+       "      <td>0.043375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>alcohol?</td>\n",
+       "      <td>0.043332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>has_wifi</td>\n",
+       "      <td>0.039857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_days_on_yelp</td>\n",
+       "      <td>0.038061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>takes_credit_cards</td>\n",
+       "      <td>0.037748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>review_count</td>\n",
+       "      <td>0.032413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_number_fans</td>\n",
+       "      <td>0.031141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>good_for_kids</td>\n",
+       "      <td>0.030382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>take_reservations</td>\n",
+       "      <td>0.024486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>number_tips</td>\n",
+       "      <td>0.014038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>weekend_checkins</td>\n",
+       "      <td>0.007863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_number_friends</td>\n",
+       "      <td>0.007629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>weekday_checkins</td>\n",
+       "      <td>0.004130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>number_pics</td>\n",
+       "      <td>0.001727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>number_funny_votes</td>\n",
+       "      <td>0.001320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>number_useful_votes</td>\n",
+       "      <td>0.000066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>stars</td>\n",
+       "      <td>average_caption_length</td>\n",
+       "      <td>0.000040</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    level_0                     level_1         0\n",
+       "162   stars                       stars  1.000000\n",
+       "167   stars    average_review_sentiment  0.782187\n",
+       "166   stars       average_review_length  0.277081\n",
+       "165   stars          average_review_age  0.125645\n",
+       "158   stars            has_bike_parking  0.068084\n",
+       "174   stars        average_review_count  0.066572\n",
+       "175   stars  average_number_years_elite  0.064419\n",
+       "178   stars          average_tip_length  0.052899\n",
+       "160   stars                 price_range  0.052565\n",
+       "169   stars           number_cool_votes  0.043375\n",
+       "156   stars                    alcohol?  0.043332\n",
+       "159   stars                    has_wifi  0.039857\n",
+       "172   stars        average_days_on_yelp  0.038061\n",
+       "164   stars          takes_credit_cards  0.037748\n",
+       "161   stars                review_count  0.032413\n",
+       "173   stars         average_number_fans  0.031141\n",
+       "157   stars               good_for_kids  0.030382\n",
+       "163   stars           take_reservations  0.024486\n",
+       "179   stars                 number_tips  0.014038\n",
+       "177   stars            weekend_checkins  0.007863\n",
+       "171   stars      average_number_friends  0.007629\n",
+       "176   stars            weekday_checkins  0.004130\n",
+       "181   stars                 number_pics  0.001727\n",
+       "168   stars          number_funny_votes  0.001320\n",
+       "170   stars         number_useful_votes  0.000066\n",
+       "180   stars      average_caption_length  0.000040"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_table = df.corr().abs().stack().reset_index().sort_values(0, \n",
+    "                                                            ascending=False)\n",
+    "corr_table[corr_table[\"level_0\"] == \"stars\"]"
    ]
   },
   {
